# python_diagnostic_base_class

./: .gitignore  README.md  pyproject.toml
diagnostic_base/: __init__.py  base.py  perf.py  tagged_logger.py
tests/: test_base.py  test_perf.py  test_tagged_logger.py
